# tocumen-panama

./: .gitignore  README.md
LisnrApp/: apikey.properties  gradle.properties  settings.gradle
LisnrApp/app/: build.gradle  proguard-rules.pro
LisnrApp/app/libs/cpp/lib/: AndroidAudioSystem.cpp  AndroidAudioSystem.h  AudioFileWriter.cpp  jni_interface.cpp
LisnrApp/app/libs/lib/: AudioFileWriter.h
LisnrApp/app/src/main/: AndroidManifest.xml
LisnrApp/app/src/main/cpp/: CMakeLists.txt
LisnrApp/app/src/main/cpp/lib/: AudioReceiver.cpp
LisnrApp/app/src/main/lib/: AudioReceiver.h  CircularBuffer.h  jni_interface.h
LisnrApp/app/src/main/res/anim/: zoom.xml
LisnrApp/app/src/main/res/drawable/: auriculares.xml  avion.xml  background_button.xml  background_gradient.xml  boton_central.xml  botoncentralactive.xml  buscar.xml  cerrar.xml  configuracion_menu.xml  contrasena.xml  correo.xml  cupones.xml  cuponesactive.xml  encojervideo.xml  estacionamientos.xml  estacionescarga.xml  expandirvideo.xml  filtros.xml  flechaabajodesplegar.xml  flechaderecha.xml  flechaizquierda.xml  flechaizquierda_mapa.xml  habilitar_microfono.xml  habilitar_notificaciones.xml  historial_menu.xml  home.xml  homeactive.xml  ic_launcher_foreground.xml  info_menu.xml  logo.xml  mapa.xml  mapaactive.xml  menu.xml  metodospago.xml  mostrar.xml  nomostrar.xml  notificaciones.xml  pagos_menu.xml  pausarvideo.xml  reclamoequipaje.xml  (+15 more)
LisnrApp/app/src/main/res/layout/: activity_gallery.xml  activity_home.xml  activity_loggin.xml  activity_login.xml  activity_main.xml  activity_permissions.xml  activity_received.xml  activity_register.xml  activity_splash.xml  app_bar_home.xml  content_home.xml  fragment_cupones.xml  fragment_home.xml  fragment_microphone.xml  fragment_notifications.xml  fragment_tickets.xml  item_generic.xml  items_recibidos.xml  nav_header_navigation_drawer.xml  view_receive_payload.xml
LisnrApp/app/src/main/res/menu/: activity_navigation_drawer_drawer.xml  menu_navigation.xml  (+1 more)
LisnrApp/gradle/wrapper/: gradle-wrapper.properties
(+65 files in other folders)
